# paraphrase-categorization

./: Finetuning_models.ipynb  Load and translate Paraphrases with GaMS _ Kaggle.html  Paraphrase_Datasets_Translations_GPT3.5.ipynb  Paraphrase_Datasets_Translations_GPT3.5_GPU.ipynb  Paraphrase_Datasets_Translations_GaMS.ipynb  Preprocessing_Datasets_withMetrics.ipynb  README.md  Rezultati few in zero shot učenja_GaMS in LlaMa.docx  SQL_data_analysis.ipynb  SQL_data_anaysis.ipynb  Translation Comparison - google translate, gpt, deepl, GaMS.xlsx  finetune_gams_results_20250626_152139.json  finetune_llama_results_20250626_150210.json  kaggle_prevajajanje_zbirk.html  kategorije_parafraz_draft  paraphrase_dataset_analysis_with_metadata.csv  paraphrase_datasets_translation_GaMS_gpu  paraphrase_datasets_translations_GPT3_5.ipynb  paraphrase_datasets_translations_gpt3_5.py  paraphrase_read-and-translate.py  paraphrase_schema.json  paraphrase_schema_slo.json  shema_jupyternotebook  training_dataset_final.csv  translate_comparison
backup_preprocessing/: README.md  Spark_preprocessing_with_metrics  msr_preprocessing_pairing  paraphrase_schema.json  paws_nepodvojene_filtrirane_parafraze.xlsx  predprocesiranje_msr.xlsx  predprocesiranje_podatkov.py  similarity_calculation.py  ~$predprocesiranje_quora_clean.xlsx
library_ontology/: schema
library_ontology/ontology_sql/: core.py  package_library.py  push_github.py  pyproject.toml
paraphrase_categorization/: manage_paraphrases.py  msr_paraphrase_test_translations_GPT3.5.txt  msr_preprocessing_pairing  paraphrase_categories.json  (+8 more)
