[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology_sql_library"
version = "0.1.0"
description = "A Python library for creating ontologies and storing/querying them in SQL databases."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "networkx",
    "sqlite3"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools]
packages = ["ontology_sql_library"]
